@@ -80,7 +80,8 @@
         app:layout_constraintStart_toEndOf="@+id/back"
         app:layout_constraintEnd_toStartOf="@+id/more"
         app:layout_constraintTop_toBottomOf="@+id/statusBar"
-        tools:text="Selena Gomez"
+        tools:text="Animal Ambition: An Untamed Desire to Win"
+        android:maxLines="1"
         android:gravity="center"
         android:layout_width="0dp"
         android:layout_height="@dimen/toolbar"
@@ -90,29 +91,27 @@
     <ImageButton
         android:id="@+id/back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/headerText"
-        app:layout_constraintBottom_toBottomOf="@+id/headerText"
+        app:layout_constraintTop_toBottomOf="@+id/statusBar"
         android:src="@drawable/vd_back_arrow"
         android:padding="12dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/toolbar"
         android:clickable="true"
         android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:elevation="2dp"/>
+        android:background="@null"
+        android:elevation="@dimen/toolbar_elevation"/>
 
     <ImageButton
         android:id="@+id/more"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/headerText"
-        app:layout_constraintBottom_toBottomOf="@+id/headerText"
+        app:layout_constraintTop_toBottomOf="@+id/statusBar"
         android:src="@drawable/vd_more"
         android:padding="12dp"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/toolbar"
         android:clickable="true"
         android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:background="@null"
         android:elevation="@dimen/toolbar_elevation"/>
 
     <ImageButton
@@ -125,7 +124,7 @@
         android:layout_height="@dimen/toolbar"
         android:clickable="true"
         android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:background="@null"
         android:elevation="@dimen/toolbar_elevation" />
 
     <FrameLayout
@@ -138,7 +137,7 @@
         android:layout_height="@dimen/toolbar"
         android:elevation="@dimen/toolbar_elevation"
         android:visibility="gone"
-        tools:visibility="visible"
+        tools:visibility="invisible"
         app:layout_constraintWidth_max="400dp">
 
         <View
